Fix horizontal overflow

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -7,3 +7,7 @@
 @import
 	"syntax"
 ;
+
+p {
+	overflow-x: scroll;
+}
